article tag extra padding fixed

--- a/framework/assets/sass/site/primary/_posts-and-pages.scss
+++ b/framework/assets/sass/site/primary/_posts-and-pages.scss
@@ -225,7 +225,7 @@
   margin: 0 1em 1.5em;
 }
 
-body:not(.single-post) .flexia-wrapper > .content-area article.hentry {
+body:not(.single-post) .flexia-wrapper > .content-area article.post {
   padding: 2.5em;
 }
 
